--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:docker": "docker run --rm -i hadolint/hadolint < Dockerfile",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
